Change file organisation

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "postcss-transform-animations",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "ava",
-    "build": "babel src/index.js -o index.js"
+    "build": "babel src --out-dir dist"
   },
+  "files": "dist",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jacobp100/postcss-transform-animations.git"
